<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/_64sdp"
    android:id="@+id/bottom_sheet_"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_height="wrap_content">
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/_4sdp"
        android:textColor="@color/text_color_selector"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toTopOf="@id/download_medium"
        android:id="@+id/downloadlarge"
        android:background="@drawable/buttun_bg_selector"
        android:text="@string/downloadhigh"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/download_medium"
        android:fontFamily="sans-serif-black"
        android:background="@drawable/buttun_bg_selector"
        android:layout_margin="@dimen/_4sdp"
        android:textColor="@color/text_color_selector"
        app:layout_constraintBottom_toTopOf="@id/download_low"
        app:layout_constraintTop_toBottomOf="@id/downloadlarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/downloadmedium"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/buttun_bg_selector"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/text_color_selector"
        android:layout_margin="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/download_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/download_low"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/downloadlow"/>






</androidx.constraintlayout.widget.ConstraintLayout>